<resources>
    <string name="app_name">Weather</string>

    <string name="menu_home">Home</string>
    <string name="menu_cities">Cities</string>
    <string name="menu_add">Add city</string>
    <string name="menu_history">History</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_company">About developer</string>
    <string name="menu_feedback">Feedback</string>
    <string name="enter_city">Enter city</string>
    <string name="author">Author</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>

    <string name="city_default">Moscow</string>

    <string name="updated">Updated: </string>
    <string name="vendor">JopaWeather</string>

    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="direction">Direction</string>
    <string name="speed">Speed</string>

    <string name="add">+</string>
    <string name="unit_deg">°</string>
    <string name="unit_percent">%</string>
    <string name="unit_speed">m/s</string>
    <string name="delimiter">/</string>

    <string name="north">N</string>
    <string name="north_east">N-W</string>
    <string name="east">W</string>
    <string name="south_east">S-W</string>
    <string name="south">S</string>
    <string name="south_west">S-E</string>
    <string name="west">E</string>
    <string name="north_west">N-E</string>

    <string name="rain">Rain</string>
    <string name="cloudy">Cloudy</string>
    <string name="party_cloudy">Party cloudy</string>
    <string name="sunny">Sunny</string>
    <string name="snow">Snow</string>

    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="message">Message</string>
    <string name="send">Send</string>

    <string name="element_number">Element number </string>

    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="clear">Clear</string>
    <string name="more">More</string>
    <string name="action_not_found">Action not found</string>

    <string name="alert_header_error">Error!</string>
    <string name="alert_header_warning">Warning!</string>
    <string name="alert_message_city">City is not found! Try to enter another city.</string>
    <string name="alert_message_reboot">The changes will takes after app restart.</string>
    <string name="alert_button_ok">OK</string>
    <string name="alert_button_understand">UNDERSTAND</string>
    <string name="alert_error_city">City is not found!</string>
    <string name="alert_error_connection">Fail connection!</string>
    <string name="alert_error_uri">Fail URI connection!</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
</resources>
