<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!--    <item-->
<!--        android:id="@+id/action_add"-->
<!--        android:orderInCategory="100"-->
<!--        android:icon="@drawable/add"-->
<!--        android:title="@string/add_city"-->
<!--        app:showAsAction="ifRoom" />-->
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        android:title="@string/menu_settings" />
    <item
        android:id="@+id/action_author"
        android:orderInCategory="300"
        android:title="@string/author"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_history"
        android:orderInCategory="400"
        android:title="@string/menu_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="500"
        android:title="@string/exit"
        app:showAsAction="never" />
</menu>
