<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme"
                android:textColor="@color/colorWhite" />

            <RadioGroup
                android:id="@+id/settings_theme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="20dp">

                <RadioButton
                    android:id="@+id/settings_theme_dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorWhite"
                    android:text="@string/dark"
                    android:textColor="@color/colorWhite" />

                <RadioButton
                    android:id="@+id/settings_theme_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorWhite"
                    android:text="@string/light"
                    android:textColor="@color/colorWhite" />
            </RadioGroup>

            <CheckBox
                android:id="@+id/settings_humidity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:buttonTint="@color/colorWhite"
                android:checked="true"
                android:text="@string/humidity"
                android:textColor="@color/colorWhite" />

            <CheckBox
                android:id="@+id/settings_wind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/colorWhite"
                android:buttonTint="@color/colorWhite"
                android:checked="true"
                android:text="@string/wind"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>