<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_company"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/author" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_title"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>